# DSL-Compose

./: DSL-Compose.cabal  Example.hs  README.md  stack.yaml
DSL/: Instruction.hs  Program.hs
DSL/Instruction/: Derive.hs
DSL/Program/: Derive.hs  Interpreter.hs  InterpreterG.hs  InterpreterR.hs  InterpreterRWS.hs  InterpreterS.hs
