name:                DSL-Compose
version:             0.4.3.0

synopsis:            Compose DSL's and their Interpreters.

description:         A quick proof-of-concept mechanism for composing 'operational' style languages
                     where each language has the ability to depend upon the composed language
                     it is contained within.
                     Interpreters can then be written for individual languages and similarly composed.
                     Interpreters can either be ran against structurally identical languages or against
                     those which are 'compatible'.
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            DSL
build-type:          Simple
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules:     DSL.Instruction
                     , DSL.Instruction.Derive
                     , DSL.Program
                     , DSL.Program.InterpreterG
                     , DSL.Program.Interpreter
                     , DSL.Program.InterpreterR
                     , DSL.Program.InterpreterS
                     , DSL.Program.InterpreterRWS
                     , DSL.Program.Derive
                     , Example

  other-extensions:    FlexibleInstances
                     , GADTs
                     , MultiParamTypeClasses
                     , PolyKinds
                     , TypeOperators
                     , UndecidableInstances
                     , FlexibleContexts
                     , RankNTypes

  -- Other library packages from which modules are imported.
  build-depends:       base
                     , template-haskell
                     , transformers

  -- Base language which the package is written in.
  default-language:    Haskell2010

